shared/src/test/data/yeast/invalid-json/incomplete-seq-1.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'key1'
Indicator           9,  2,  7 '\"'
EndScalar          10,  2,  8 ''
Indicator          10,  2,  8 ':'
WhiteSpace         11,  2,  9 ' '
BeginSequence      12,  2, 10 '['
LineBreak          13,  2, 11 '\n'
WhiteSpace         14,  3,  0 '    '
BeginScalar        18,  3,  4 ''
Indicator          18,  3,  4 '\"'
Text               19,  3,  5 'value1'
Indicator          25,  3, 11 '\"'
EndScalar          26,  3, 12 ''
LineBreak          26,  3, 12 '\n'
EndMapping         27,  4,  0 '}'
